# minesweeper

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  minesweeper.rc
res/: application-icon-macos.icns  version.h.template
src/: main.c  version.h
src/gui/: gui.h  gui_game_callback_cell_update.c  gui_game_callback_game_update.c  gui_game_callback_timer.c  gui_image_load_from_memory_scale.c  gui_image_logo.h  gui_main_callback_app_activate.c  gui_main_callback_click_mine.c  gui_main_callback_drawing_area_click.c  gui_main_callback_drawing_area_draw.c  gui_main_callback_drawing_area_new_size.c  gui_main_callback_menu_about.c  gui_main_callback_menu_new_game.c  gui_main_callback_timeout_render.c  gui_main_callback_window_destroy.c  gui_main_initialize_main_window.c  gui_toolbox_is_gtk_dark_theme_enabled.c
src/gui/image/: gui_image_about_dark.h  gui_image_about_light.h  gui_image_newgame_dark.h  gui_image_newgame_light.h  gui_image_tile_close.h  gui_image_tile_empty.h  gui_image_tile_flag.h  gui_image_tile_mine.h  gui_image_tile_number_1.h  gui_image_tile_number_2.h  gui_image_tile_number_3.h  gui_image_tile_number_4.h  gui_image_tile_number_5.h  gui_image_tile_number_6.h  gui_image_tile_number_7.h  gui_image_tile_open.h
src/minesweeper/: minesweeper.h  minesweeper_change_game_state.c  minesweeper_create.c  minesweeper_destroy.c  minesweeper_dump.c  minesweeper_get_adjacent_cells.c  minesweeper_get_cell.c  minesweeper_is_all_cells_open.c  minesweeper_open_cell.c  minesweeper_toggle_flag.c
